fixed bgartowork not showing

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -2,7 +2,7 @@ html, body {
   height: 100%;
   margin: 0;
   background-color: black;
-  background-image: url("/backgroundartwork.png");
+  background-image: url("/bgartwork.png");
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
